test/fail/varargs-multipart-not-enough.grace
method first(one, two, *three) second(*four, five, six) {}

first(object {}) second(object {})
